added new blog-post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -97,7 +97,7 @@
     <link rel="canonical" href="{{ url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}"
         href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}" />
-    <link rel='manifest' href='/manifest.json'>
+    <link rel='manifest' href='../manifest.json'>
     <link rel='wellknown' href='.well-known/assetlinks.json'>
     <link rel='ads' href='/ads.txt'>
 
