--- a/_includes/head.html
+++ b/_includes/head.html
@@ -129,4 +129,7 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5165937973513449"
         crossorigin="anonymous"></script>
+
+ <!-- Umimi Cloud  -->
+ <script defer src="https://cloud.umami.is/script.js" data-website-id="829059de-d23d-481c-9e95-8c57d7eac57a"></script>
 </head>
